ImpressCMS ChangeLog
=== ImpressCMS 1.3 Beta ===
Release date: 
Revision: 
DB Version: 41
Build Version: 43

=== ImpressCMS 1.3 Alpha ===
Release date: 8 January 2011
Revision: 20660
DB Version: 41
Build Version: 42

List of changes to this release can be found here - http://sourceforge.net/apps/trac/impresscms/query?status=closed&group=component&order=priority&col=id&col=summary&col=milestone&col=status&col=type&col=priority&col=component&milestone=ImpressCMS+1.3

=== ImpressCMS 1.2.4 Final ===
Release date: 12 Dec 2010
Revision: 20606
DB Version: 40
Build Version: 41

=== ImpressCMS 1.2.3 Final ===
Release date: 15 Nov 2010
Revision: 20381
DB Version: 40
Build Version: 40

=== ImpressCMS 1.2.3 RC2 ===
Release date: 7 Nov 2010
Revision: 20306
DB Version: 40
Build Version: 39

=== ImpressCMS 1.2.3 RC ===
Release date: 24 Sep 2010
Revision: 20198
DB Version: 40
Build Version: 38

=== ImpressCMS 1.2.3 Beta ===
Release date: 17 Sep 2010
Revision: 20154
DB Version: 40
Build Version: 37

Maintenance release, addresses #462, #480 and #482, #493
Security Fix: Blind SQLi & Path disclosure in search.php & settingmanager (if install folder left on server)

=== ImpressCMS 1.2.2 Final ===
Release date: 17 July 2010
Revision: 19868
DB Version: 40
Build Version: 36

Addresses http://secunia.com/advisories/40522

=== ImpressCMS 1.2.1 Final ===
Release date: 14 Mar 2010
Revision: 19094
DB Version: 39
Build Version: 35

http://trac.impresscms.org/core/query?status=closed&group=resolution&milestone=ImpressCMS+1.2.1

=== ImpressCMS 1.2.1 RC ===
Release date: 1 Mar 2010
Revision: 9881
DB Version: 39
Build Version: 34

http://trac.impresscms.org/core/query?status=closed&group=resolution&milestone=ImpressCMS+1.2.1

Note: 	From this release forward, the detailed changelog will not be included with the 
		release package. The tickets are all in Trac and can easily be found and retrieved
		from there.
		