@@ -2,8 +2,10 @@ ImpressCMS ChangeLog
 === ImpressCMS 1.3 Beta ===
 Release date: 
 Revision: 
-DB Version: 41
+DB Version: 42
 Build Version: 43
+
++ added missing custom filters for HTMLPurifier preferences (forgot to add these in previous versions)
 
 === ImpressCMS 1.3 Alpha ===
 Release date: 8 January 2011
